tests/ui/associated-types/associated-types-eq-1.stderr
error[E0412]: cannot find type `A` in this scope
  --> $DIR/associated-types-eq-1.rs:10:12
   |
LL | fn foo2<I: Foo>(x: I) {
   |         - similarly named type parameter `I` defined here
LL |     let _: A = x.boo();
   |            ^
   |
help: a type parameter with a similar name exists
   |
LL -     let _: A = x.boo();
LL +     let _: I = x.boo();
   |
help: you might be missing a type parameter
   |
LL | fn foo2<I: Foo, A>(x: I) {
   |               +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
